--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.3
 comm==0.1.3
 contourpy==1.0.7
 cycler==0.11.0
@@ -23,10 +24,12 @@ defusedxml==0.7.1
 dill==0.3.6
 exceptiongroup==1.1.1
 executing==1.2.0
+fastapi==0.96.0
 fastjsonschema==2.17.1
 fonttools==4.39.4
 fqdn==1.5.1
 googleapis-common-protos==1.59.0
+h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
 ipdb==0.13.13
@@ -83,6 +86,7 @@ pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
+pydantic==1.10.8
 Pygments==2.15.1
 pylint==2.17.4
 pyparsing==3.0.9
@@ -107,6 +111,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
 stack-data==0.6.2
+starlette==0.27.0
 tenacity==8.2.2
 terminado==0.17.1
 threadpoolctl==3.1.0
@@ -119,6 +124,7 @@ typing_extensions==4.6.3
 tzdata==2023.3
 uri-template==1.2.0
 urllib3==1.26.16
+uvicorn==0.22.0
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
