--- a/.env.yaml
+++ b/.env.yaml
@@ -1,4 +1,4 @@
-GCP_PROJECT: "le-wagon-1704"
+GCP_PROJECT: "le-wagon-ds-bootcamp-383713"
 GCP_REGION: "europe-west1"
 
 BQ_REGION: "europe-west1"
@@ -7,3 +7,12 @@ BQ_DATASET: "bikesharing"
 GCR_IMAGE: "bikesharing"
 GCR_REGION: "eu.gcr.io"
 GCR_MEMORY: "2Gi"
+
+START_YEAR: "2019"
+END_YEAR: "2022"
+
+FOLD_LENGTH: "8760"
+FOLD_STRIDE: "8760"
+TRAIN_TEST_RATIO: "0.8"
+INPUT_LENGTH: "336"
+OUTPUT_LENGTH: "24"
